--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,10 +6,14 @@ on:
         required: true
         type: string
         description: team name
-        
+
+      
 jobs:
   teams:
     runs-on: ubuntu-latest
+    env: 
+      TFE_ADDR: app.terraform.io 
+      TFE_ORG: shb-1988
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -19,4 +23,5 @@ jobs:
         uses: ./my-custom-action
         with:
           team_name: 'team4'
+          tfe_token: $${{ secrets.TFE_TOKEN }}
 
