--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,3 +19,4 @@ jobs:
         uses: ./my-custom-action
         with:
           team_name: 'team4'
+          tfe_token: $${{ secrets.TFE_TOKEN }}
