--- a/my-custom-action/action.yaml
+++ b/my-custom-action/action.yaml
@@ -5,11 +5,14 @@ inputs:
   team_name:
     description: 'The team name to be created.'
     required: true
+  tfe_token: 
+    description: 'TFE token'
+    required: true
 runs:
   using: "composite"
   steps:
     - run: chmod 777 ./my-custom-action/create-team.sh 
       shell: bash
-    - run: ./my-custom-action/create-team.sh  ${team_name}
+    - run: ./my-custom-action/create-team.sh  ${inputs.team_name} ${inputs.tfe_token}
       shell: bash
 
